// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup 垂直按钮组 1`] = `
<div>
  <div
    class="xl-button-group xl-button-group--vertical"
  >
    <button
      class="xl-button xl-button--default xl-button--size-default"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-default"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-default"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-default"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="xl-button-group xl-button-group--vertical xl-button-group--round"
  >
    <button
      class="xl-button xl-button--default xl-button--size-default"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-default"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-default"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-default"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="xl-button-group xl-button-group--vertical"
  >
    <button
      class="xl-button xl-button--default xl-button--size-small"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-small"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-small"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-small"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-small"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-small"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="xl-button-group xl-button-group--vertical"
  >
    <button
      class="xl-button xl-button--default xl-button--size-default"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-default"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-default"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-default"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="xl-button-group xl-button-group--vertical"
  >
    <button
      class="xl-button xl-button--default xl-button--size-large"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-large"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-large"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-large"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-large"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-large"
    >
      <span>
        Error
      </span>
    </button>
  </div>
</div>
`;

exports[`ButtonGroup 水平按钮组 1`] = `
<div>
  <div
    class="xl-button-group xl-button-group--horizontal"
  >
    <button
      class="xl-button xl-button--default xl-button--size-default"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-default"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-default"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-default"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="xl-button-group xl-button-group--horizontal xl-button-group--round"
  >
    <button
      class="xl-button xl-button--default xl-button--size-default"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-default"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-default"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-default"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="xl-button-group xl-button-group--horizontal"
  >
    <button
      class="xl-button xl-button--default xl-button--size-small"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-small"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-small"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-small"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-small"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-small"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="xl-button-group xl-button-group--horizontal"
  >
    <button
      class="xl-button xl-button--default xl-button--size-default"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-default"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-default"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-default"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-default"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="xl-button-group xl-button-group--horizontal"
  >
    <button
      class="xl-button xl-button--default xl-button--size-large"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="xl-button xl-button--primary xl-button--size-large"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="xl-button xl-button--success xl-button--size-large"
    >
      <span>
        Success
      </span>
    </button>
    <button
      class="xl-button xl-button--warning xl-button--size-large"
    >
      <span>
        Warning
      </span>
    </button>
    <button
      class="xl-button xl-button--error xl-button--size-large"
    >
      <span>
        Error
      </span>
    </button>
    <button
      class="xl-button xl-button--text xl-button--size-large"
    >
      <span>
        Error
      </span>
    </button>
  </div>
</div>
`;

exports[`ButtonGroup 设置size的优先级 1`] = `
<div
  class="xl-button-group xl-button-group--horizontal"
>
  <button
    class="xl-button xl-button--default xl-button--size-large"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="xl-button xl-button--text xl-button--size-large"
  >
    <span>
      Error
    </span>
  </button>
</div>
`;
